--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["rsd <rdmingazov@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^3.1.7"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
